# xpic-processor

./: .gitignore  CMakeLists.txt  README.md  local-ci.sh
benchmark/: CMakeLists.txt  sequence.cpp
cmake/: Dependencies-pkg.cmake  Dependencies-repo.cmake  Dependencies.cmake
debian-trixie-gcc-14/: Dockerfile  README.md  bash_env
docs/: build.md  docker.md
include/core/: nc.h
include/err/: error_info.h
include/fio/: filehandler.h
include/img/: blender.h  img_hdr.h  inputimg.h  jpeg_compressor.h  jpeg_decoder.h  jpeg_decompressor.h
include/metric/: pnsr_mgr.h  ssim_mgr.h
include/platform/: env_mgr.h
include/quality/: mgr.h
include/utils/: arg_parser.h
jpeg-processor/: README.md  local-ci.sh
jpeg-processor/cmake/: Dependencies.cmake
jpeg-processor/docs/: Doxyfile.in  docker.md
jpeg-processor/include/err/: error_info.h
jpeg-processor/include/img/: blender.h  img_hdr.h  jerr.h  jpeg_compressor.h  jpeg_decompressor.h
jpeg-processor/include/topology/: corety.h
jpeg-processor/include/utils/: arg_parser.h
jpeg-processor/src/deinterlacer/: main.cpp
jpeg-processor/src/fio/: CMakeLists.txt
jpeg-processor/src/img/: CMakeLists.txt  blender.cpp  img_hdr.cpp  jpeg_compressor.cpp  jpeg_decompressor.cpp
jpeg-processor/src/img/test/: CMakeLists.txt  test_jpeg_compressor.cpp
jpeg-processor/src/platform/: CMakeLists.txt  cache.cpp
jpeg-processor/src/platform/test/: test_cache.cpp  test_env_mgr.cpp
jpeg-processor/src/utils/: arg_parser.cpp
pic-processor-wgit/: .gitignore  CMakeLists.txt  README.md  build.sh  local-ci.sh
pic-processor-wgit/docs/: Doxyfile.in  docker.md  tests.md
pic-processor-wgit/include/core/: ncnm.h
pic-processor-wgit/include/fio/: filehandler.h
pic-processor-wgit/include/img/: img_hdr.h
pic-processor-wgit/include/platform/: cache.h
pic-processor-wgit/include/topology/: errty.h
pic-processor-wgit/include/utils/: arg_parser.h
pic-processor-wgit/src/: CMakeLists.txt
pic-processor-wgit/src/deinterlacer/: main.cpp
pic-processor-wgit/src/fio/: filehandler.cpp
pic-processor-wgit/src/fio/test/: CMakeLists.txt  test_filehandler.cpp
pic-processor-wgit/src/img/: jpeg_compressor.cpp  jpeg_decompressor.cpp
pic-processor-wgit/src/img/test/: CMakeLists.txt  test_img_hdr.cpp
pic-processor-wgit/src/platform/: env_mgr.cpp
pic-processor-wgit/src/utils/: arg_parser.cpp
pic-processor-wgit/test/: CMakeLists.txt  test_core.cpp
pic-processor-wgit/tools/: README.md
src/: CMakeLists.txt
src/deinterlacer/: CMakeLists.txt
src/fio/: CMakeLists.txt
src/img/: CMakeLists.txt  jpeg_compressor.cpp  jpeg_decoder.cpp  jpeg_decompressor.cpp
src/img/test/: CMakeLists.txt  test_blender.cpp  test_img_hdr.cpp  test_jpeg_decoder.cpp  test_jpeg_decompressor.cpp
src/metric/: CMakeLists.txt  pnsr_mgr.cpp  ssim_mgr.cpp
src/metric/test/: CMakeLists.txt  test_pnsr_mgr.cpp  test_ssim_mgr.cpp
src/platform/: CMakeLists.txt
src/platform/test/: CMakeLists.txt
src/quality/: CMakeLists.txt  mgr.cpp
src/quality/test/: CMakeLists.txt  test_mgr.cpp
src/utils/: CMakeLists.txt  arg_parser.cpp
src/utils/test/: CMakeLists.txt  test_arg_parser.cpp
tools/: README.md  unit-test-report-maker.py  valgrind-report-maker.py
ubuntu-resolute-gcc-15/: Dockerfile  README.md  bash_aliases  bashrc
